@@ -58,6 +58,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 11848) Allow URL parameters 'editintro' and 'preload' in Special:Mypage 
   and Special:Mytalk
 * Add special page for getting random page from category
+* Add link on Special:Randomincategory to sidebar
 
 === Bug fixes in 1.12 ===
 
